2010-05-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#157311 problem with opening pop-ups

	* matchbox/core/mb-wm-client.c (mb_wm_client_iconize):
	  Simply unmap the window rather than attempting any broken magic.

2010-05-03  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_sync_properties):
	  Removed a few obsolete debug messages.

2010-04-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#160226 - Hildon desktop crashed while playing marble game

	* matchbox/core/mb-wm-main-context.c: Make sure we only delete handlers
	  when we're *not* nested, otherwise we risk causing a linked list
	  traversal to break.

2010-03-26  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 0.2.90-3.

2010-03-26  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler):
	  Don't forget to ungrab the pointer.  Fixes the press-menu-blank
	  => menu-opens scenario.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 0.2.90-2.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	For NB#157265.  Activate the application menu only on ButtonRelease.

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler):
	  Handle ButtonRelease:s, but only if it happens outside the button
	  but within the decor.

2010-03-25  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Release 0.2.90-1.

2010-03-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	For NB#157265.

	* matchbox/core/mb-window-manager.c (mb_wm_unmanage_client):
	  Do restack even if an override-redirected window is being
	  unmanaged because its fullscreenness might have influenced
	  the composit manager.

2010-02-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.89

2010-02-24  Gordon Williams <gordon.williams@collabora.co.uk>

	NB#158114 - When starting device with beta theme, menu borders are 
	            from devel theme
	            